Solve layout issues and Added essential medai queries
Improved the layout on mobile and tablet and even iphone ... yep

--- a/post_page/css/gallery.css
+++ b/post_page/css/gallery.css
@@ -105,16 +105,5 @@
   text-decoration: none;
 }
 
-/* Let's make it responsive */
- @media (max-width: 768px) {
-  .image-gallery {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-auto-rows: 150px;
-  }
 
-  .image-gallery .image-box:nth-child(7n + 1) {
-    grid-column: span 1.5;
-    grid-row: span 2;
-  }
-} 
 
